--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@fontsource-variable/rubik": "^5.0.10",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
+    "chartjs": "^0.3.24",
     "formik": "^2.4.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
